fix: Update dependencies